--- a/Simulation.vcxproj
+++ b/Simulation.vcxproj
@@ -127,17 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Customer.cpp" />
-    <ClCompile Include="Employee.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Stand.cpp" />
-    <ClCompile Include="RestaurantSim.cpp" />
+    <ClCompile Include="source\Customer.cpp" />
+    <ClCompile Include="source\Employee.cpp" />
+    <ClCompile Include="source\Main.cpp" />
+    <ClCompile Include="source\Stand.cpp" />
+    <ClCompile Include="source\RestaurantSim.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Customer.h" />
-    <ClInclude Include="Employee.h" />
-    <ClInclude Include="Stand.h" />
-    <ClInclude Include="RestaurantSim.h" />
+    <ClInclude Include="source\Customer.h" />
+    <ClInclude Include="source\Employee.h" />
+    <ClInclude Include="source\Stand.h" />
+    <ClInclude Include="source\RestaurantSim.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
